--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.selector-for-some-widget {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+}
 
 body, html {
 }
