--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ button {
 	margin: 0 1px;
 }
 
+/*.ass {
+	display: none;
+}*/
+
 .completedTask li label {
 	background-color: #DCE2E2;
 }
@@ -58,14 +62,14 @@ footer p span {
 }
 
 @media screen and (min-width: 500px){
-	.wrapper {
+	#wrapper {
 		max-width: 90%;
 		margin: 0 auto;
 	}
 
-ul {
-	margin: 10px;
-}
+	ul {
+		margin: 10px;
+	}
 	button {
 		margin: 0 3px;
 	}
